WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
174455
Missing exception check in JSObject::hasInstance
https://bugs.webkit.org/show_bug.cgi?id=174455
Summary
Missing exception check in JSObject::hasInstance
Saam Barati
Reported
2017-07-12 21:15:05 PDT
...
Attachments
patch
(3.38 KB, patch)
2017-07-12 21:19 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2017-07-12 21:17:18 PDT
<
rdar://problem/31384608
>
Saam Barati
Comment 2
2017-07-12 21:19:15 PDT
Created
attachment 315334
[details]
patch
Mark Lam
Comment 3
2017-07-12 21:20:27 PDT
Comment on
attachment 315334
[details]
patch r=me
WebKit Commit Bot
Comment 4
2017-07-13 10:03:48 PDT
Comment on
attachment 315334
[details]
patch Clearing flags on attachment: 315334 Committed
r219451
: <
http://trac.webkit.org/changeset/219451
>
WebKit Commit Bot
Comment 5
2017-07-13 10:03:50 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug