Missing exception check in JSObject::hasInstance https://bugs.webkit.org/show_bug.cgi?id=174455 <rdar://problem/31384608>

Reviewed by Mark Lam.

JSTests:

* stress/has-instance-exception-check.js: Added.
(assert):
(let.getter.Object.getOwnPropertyDescriptor.get foo):

Source/JavaScriptCore:

* runtime/JSObject.cpp:
(JSC::JSObject::hasInstance):


Canonical link: https://commits.webkit.org/191280@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219451 268f45cc-cd09-0410-ab3c-d52691b4dbfc